# learn_polars

./: .gitignore  pyproject.toml
notebooks/: nb1.ipynb  prep.py
package/: paths.py
scripts/: gendata.py  setpath.py
