[tool.poetry]
name = "learn-polars"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "package"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pyarrow = "^16.0.0"
xlsxwriter = "^3.2.0"
openpyxl = "^3.1.2"
polars = "^0.20.22"
hvplot = "^0.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
